--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <img src="dbs.png" width="100%">
             <br>
           <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-          <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>BDSD</strong></button></a>
+          <a href="bdfd.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>BDSD</strong></button></a>
           <br>
 
         </header>
