--- a/bdfd.html
+++ b/bdfd.html
@@ -1,1 +1,10 @@
-
+<html>
+    <head>
+        <title>Discord Bot Studio</title>
+    </head>
+    <body>
+        <header>
+            <h1>Making</h1>
+        </header>
+    </body>
+</html>
