--- a/index.html
+++ b/index.html
@@ -7,8 +7,17 @@
             <img src="dbs.png" width="100%">
             <br>
           <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-          <a href="error.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>BDSD</strong></button></a>
+        <a href="error.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>BDSD</strong></button></a>
           <br>
+
+          <anv>
+            <ul class="list">
+              <li><a href="index.html" class="list-link" title="網站首頁">首頁</a></li>
+              <li><a href="error.html" class="list-link" title="想學指令?">BDFD</a></li>
+              <li><a href="error.html" class="list-link" title="幫你快速完成複雜指令">test</a></li>
+              <li><a href="error.html" class="list-link" title="用模組添加遊戲的樂趣吧">test</a></li>
+            </ul>
+          </anv>
 
         </header>
 
