--- a/bdfd.html
+++ b/bdfd.html
@@ -1,8 +1,8 @@
 <html>
     <head>
-        <title>Discord Bot Studio</title>
+        <title>bdfd</title>
     </head>
     <body>
-       <h1>Making</h1>
+       
     </body>
 </html>
