--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
           <anv>
             <ul class="list">
-              <li><a href="index.html" class="list-link" title="網站首頁">首頁</a></li>
-              <li><a href="error.html" class="list-link" title="想學指令?">BDFD</a></li>
-              <li><a href="error.html" class="list-link" title="幫你快速完成複雜指令">test</a></li>
-              <li><a href="error.html" class="list-link" title="用模組添加遊戲的樂趣吧">test</a></li>
+              <li><a href="index.html" class="list-link" >Home</a></li>
+              <li><a href="error.html" class="list-link" >test</a></li>
+              <li><a href="error.html" class="list-link" >test</a></li>
+              <li><a href="error.html" class="list-link" >test</a></li>
             </ul>
           </anv>
 
