--- a/error.html
+++ b/error.html
@@ -4,6 +4,6 @@
         <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
     </head>
     <body>
-       <h1 align="center">Back to frist page</h1>
+       <h1 align="center">Error 404---BDS</h1>
     </body>
 </html>
