--- a/error.html
+++ b/error.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>error404</title>
+        <link rel="stylesheet" href="style.css" />
         <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
     </head>
     <body>
