--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
     <div class="title">
       <h2>DC群組</h2>
-        <iframe align="center" src="https://discord.com/widget?id=968363535405023262&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <iframes src="https://discord.com/widget?id=968363535405023262&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         <br>
     </div>
         <a href="https://discord.gg/E8gbR8gHb2" target="_back"><button  class="dc_button" style="width: 300px; border-radius: 9px; background-color: #7289da; color: white; border-color: white; height: 50px; font-size: 30px;"><strong>DBS Group</strong></button></a>
