--- a/error.html
+++ b/error.html
@@ -1,11 +1,13 @@
 <html>
     <head>
         <title>Ooops error404</title>
+        <img src="error.jpg" width="50%">
+        <h1>Error 404---DBS</h1>
+        <h1>Please Back To Frist Page</h1>
         <link rel="stylesheet" href="style.css" />
         <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
     </head>
     <body>
-    <h1 align="center">Error 404---DBS</h1>
-    <h1 align="center">Please Back To Frist Page</h1>
+        
     </body>
 </html>
