--- a/index.html
+++ b/index.html
@@ -5,20 +5,14 @@
     </head>
     <body>
         <header>
-            <img src="dbs.png" width="100%">
-            <br>
-          <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-          <a href="bdfd.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>BDSD</strong></button></a>
-          <a href="error.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>PY/JS</strong></button></a>
-          </strong></button></a>
+          <img src="dbs.png" width="100%">
           <br>
-
           <anv>
             <ul class="list">
-              <li><a href="index.html" class="list-link" >Home</a></li>
-              <li><a href="error.html" class="list-link" >test</a></li>
-              <li><a href="error.html" class="list-link" >test</a></li>
-              <li><a href="error.html" class="list-link" >test</a></li>
+              <li><a href="index.html" class="list-link" title="網站首頁">Home</a></li>
+              <li><a href="bdfd.html" class="list-link" title="Bot Designer For Discord">BDFD</a></li>
+              <li><a href="error.html" class="list-link" title="JavaScpirt/Python">Py/Js</a></li>
+              <li><a href="error.html" class="list-link" title="test">error</a></li>
             </ul>
           </anv>
 
@@ -27,11 +21,11 @@
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
 
+    <div class="title">
       <h2>DC群組</h2>
       <iframe src="https://discord.com/widget?id=968363535405023262&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       <br>
         <a href="https://discord.gg/E8gbR8gHb2" target="_back"><button  class="dc_button" style="width: 350px; border-radius: 9px; background-color: #7289da; color: white; border-color: white; height: 50px; font-size: 30px;"><strong>DBS Group</strong></button></a>
-
-
+      </div>
     </body>
 </html>
