--- a/wellcome-bd.html
+++ b/wellcome-bd.html
@@ -6,7 +6,15 @@
     <body>
         <img src="bdfd.jpg" width="100%">
         <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-        <br>
-        <a href="wellcome-bd.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>歡迎訊息</strong></button></a>
+        <br><br><br>
+        <h1>歡迎訊息</h1>
+        <h3>Wellcome Message</h3>
+        <h4>$nomention<br>
+            $title[Wellcome]<br>
+            $description[歡迎<@$authorID>]<br>
+            $footer[日期：$date]<br>
+            $color[ffffff]</h4>
+            <h2>效果如下:</h2>
+            <img src="joinms.jpg" width="50%">
     </body>
 </html>
