--- a/wellcome-bd.html
+++ b/wellcome-bd.html
@@ -9,6 +9,7 @@
         <br><br><br>
         <h1>歡迎訊息</h1>
         <h3>Wellcome Message</h3>
+        <h3>Trigger: $onJoined[自行填寫頻道ID]</h3>
         <h4>$nomention<br>
             $title[Wellcome]<br>
             $description[歡迎<@$authorID>]<br>
