--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <iframe src="https://discord.com/widget?id=968363535405023262&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       <br>
         <a href="https://discord.gg/E8gbR8gHb2" target="_back"><button  class="dc_button" style="width: 350px; border-radius: 9px; background-color: #7289da; color: white; border-color: white; height: 50px; font-size: 30px;"><strong>DBS Group</strong></button></a>
-      </div>
+    
+      <br><br><br><br><br><br>
+      <h6 align="center"> By.alexkong1123  LastUpdate:16:49 1/5/2022</h6>
     </body>
 </html>
