--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
 
     <div class="title">
-      <h2>DC群組</h2>
+      <h2>Discord群組</h2>
       <iframe src="https://discord.com/widget?id=968363535405023262&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       <br>
         <a href="https://discord.gg/E8gbR8gHb2" target="_back"><button  class="dc_button" style="width: 350px; border-radius: 9px; background-color: #7289da; color: white; border-color: white; height: 50px; font-size: 30px;"><strong>DBS Group</strong></button></a>
