--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
               <li><a href="error.html" class="list-link" title="test">error</a></li>
             </ul>
           </anv>
+        
 
         </header>
+        <h1 align="center">嗨嗨！歡迎來到Discord Bot Studio 官方網站</h1>
+        <h2 align="center">這裏有做機械人的教程 歡迎看看 :)</h2>
+        <h3 align="center">此網站持續更新中 :]</h3>
 
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
