--- a/bdfd.html
+++ b/bdfd.html
@@ -2,11 +2,19 @@
     <head>
         <title>bdfd-DBS</title>
         <link rel="stylesheet" href="style.css" />
+        <img src="bdfd.png" width="100%">
+        <br>
+        <anv>
+            <ul class="list">
+              <li><a href="index.html" class="list-link" title="網站首頁">首頁</a></li>
+              <li><a href="index.html" class="list-link" title="Bot Designer For Discord">返回上一頁</a></li>
+              <li><a href="error.html" class="list-link" title="JavaScpirt/Python">提醒</a></li>
+              <li><a href="error.html" class="list-link" title="test">關於我們</a></li>
+            </ul>
+          </anv>
+
     </head>
     <body>
-        <img src="bdfd.jpg" width="100%">
-        <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-        <br>
         <a href="wellcome-bd.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>歡迎訊息</strong></button></a>
     </body>
 </html>
