--- a/wellcome-bd.html
+++ b/wellcome-bd.html
@@ -4,9 +4,16 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-        <img src="bdfd.jpg" width="100%">
-        <a href="index.html" target="_back"><button  class="button" style="width: 200px; border-radius: 9px; background-color: #000000; color: white; border-color: white; height: 50px; font-size: 20px;"><strong>Home</strong></button></a>
-        <br><br><br>
+        <img src="bdfd.png" width="100%">
+        <anv>
+            <ul class="list">
+              <li><a href="index.html" class="list-link" title="網站首頁">首頁</a></li>
+              <li><a href="bdfd.html" class="list-link" title="Bot Designer For Discord">返回上一頁</a></li>
+              <li><a href="error.html" class="list-link" title="JavaScpirt/Python">提醒</a></li>
+              <li><a href="error.html" class="list-link" title="test">關於我們</a></li>
+            </ul>
+          </anv>
+
         <h1>歡迎訊息</h1>
         <h3>Wellcome Message</h3>
         <h3>Trigger: $onJoined[自行填寫頻道ID]</h3>
