--- a/wellcome-bd.html
+++ b/wellcome-bd.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>bdfd-DBS</title>
+        <title>bdfd_DBS</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
