--- a/wellcome-bd.html
+++ b/wellcome-bd.html
@@ -23,7 +23,7 @@
             $footer[日期：$date]<br>
             $color[ffffff]</h4>
             <h2>效果如下:</h2>
-            <img src="joinms.jpg" width="50%">
-
+            <img src="joinms.jpg" width="65%">
+            <h6>Last Update:5/4 1:10pm</h6>
     </body>
 </html>
