--- a/hint.html
+++ b/hint.html
@@ -13,17 +13,9 @@
               <li><a href="error.html" class="list-link" title="test">關於我們</a></li>
             </ul>
           </anv>
-
-        <h1>歡迎訊息</h1>
-        <h3>Wellcome Message</h3>
-        <h3>Trigger: $onJoined[自行填寫頻道ID]</h3>
-        <h4>$nomention<br>
-            $title[Wellcome]<br>
-            $description[歡迎<@$authorID>]<br>
-            $footer[日期：$date]<br>
-            $color[ffffff]</h4>
-            <h2>效果如下:</h2>
-            <img src="joinms.jpg" width="50%">
-
-    </body>
-</html>
+          <h1>Bot Designer 小提示</h1>
+          <h3>Bot Designer hint</h3>
+          <h3>Trigger是下面那個</h3>
+          <img src="trigger.jpg" width="50%">
+          <h3>第二個指令指的是創建新的指令</h3>
+          <img src="addcomm.jpg" width="50%">
