--- a/bdfd.html
+++ b/bdfd.html
@@ -7,7 +7,7 @@
           <ul class="list">
             <li><a href="index.html" class="list-link" title="網站首頁">首頁</a></li>
             <li><a href="index.html" class="list-link" title="Bot Designer For Discord">返回上一頁</a></li>
-            <li><a href="error.html" class="list-link" title="JavaScpirt/Python">提醒</a></li>
+            <li><a href="hint.html" class="list-link" title="bdfd-DBS">提醒</a></li>
             <li><a href="error.html" class="list-link" title="test">關於我們</a></li>
           </ul>
         </anv>
